[package]
name = "decr"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

[dependencies]
itertools = "0.7"

[dependencies.clap]
default-features = false
version = "2"

[dependencies.error-chain]
default-features = false
version = "0.11"

[dependencies.rustfft]
git = "https://github.com/awelkie/rustfft"
rev = "3bd0f459fbddaf276e45e4f714e846498c727d5f"

[profile.release]
lto = true
